--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
   <html>
     <head>
-      <title>Chapter 2</title>
-      <link rel = "stylesheet" href="css/c01.css"
+      <title>Constructive &amp; Co.</title>
+      <link rel = "stylesheet" href="c01.css"/>
     </head>
     <body>
-      <div id = "content">
-        <h1>Playing with js</h1>
-        <div id = "cost"></div>
-      </div>
-      <script src = "./index.js"></script>
+      <h1>Constructive &amp; Co.</h1>
+      <p>for all orders and inquiries please call
+        <em>555-2244</em></p>
+        <p id = 'greeting'></p>
+    <script src = "./js/add-content.js"></script>
     </body>
   </html>
 
